syntax = "proto3";

package payment;

option go_package = "github.com/nekizz/final-project/backend/go-pbtype/payment";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Payment {
  int32 id = 1;
  string payment_type = 2;
  string card_name = 3;
  string card_type = 4;
  string card_number = 5;
  string expired_date = 6;

  string created_at = 20;
  string updated_at = 21;
}

message PaymentV2 {
  int32 id = 1;
  string paypal_payment_id = 2;
  string status = 3;
  int32 booking_id = 7;

  string created_at = 20;
  string updated_at = 21;
}

message OnePaymentRequest {
  string id = 1;
}

message ListPaymentRequest {
  uint32 page = 3;
  uint32 limit = 4;
  string created_at_min = 5;
  string created_at_max = 6;
  string search_field = 7;
  string search_value = 8;
}

message ListPaymentResponse {
  repeated Payment items = 1;
  uint32 max_page = 2;
  uint32 total_count = 3;
  uint32 page = 4;
  uint32 limit = 5;
  string search_field = 6;
  string search_value = 7;
}

message CreatePaymentResponse {
  int32 id = 1;
  Payment payment = 2;
  bool success = 3;
  string error = 4;
  google.protobuf.Timestamp timestamp = 5;
}
message RollbackResponse {
  uint64 customer_id = 1;
  uint64 payment_id = 2;
  bool success = 3;
  string error = 4;
  google.protobuf.Timestamp timestamp = 5;
}


enum PaymentStatus {
  STATUS_EXUCUTE = 0;
  STATUS_SUCCESS = 1;
  STATUS_FAILED = 2;
  STATUS_ROLLBACKED = 3;
  STATUS_ROLLBACK_FAIL = 4;
}

service PaymentService {
  rpc Create(Payment) returns (Payment) {
    option (google.api.http) = {
      post: "/payment"
      body: "*"
    };
  };

  rpc Update(Payment) returns (Payment) {
    option (google.api.http) = {
      put: "/payment/{id}"
      body: "*"
    };
  };
  rpc Get(OnePaymentRequest) returns (Payment) {
    option (google.api.http) = {
      get: "/payment/{id}"
    };
  };
  rpc List(ListPaymentRequest) returns (ListPaymentResponse) {
    option (google.api.http) = {
      get: "/payments"
    };
  };
  rpc Delete(OnePaymentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/payment/{id}"
    };
  };
}